--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-matplotlib
-seaborn
-ucimlrepo
+streamlit==1.25.0
+pandas==1.5.3
+matplotlib==3.8.0
+seaborn==0.12.2
+ucimlrepo==0.1.2
